@@ -1,5 +1,6 @@
 Acknowledgements: libfdatetime
 
+Copyright (c) 2010, Joachim Metz <jbmetz@users.sourceforge.net>
 Copyright (c) 2009-2010, Joachim Metz <forensics@hoffmannbv.nl>,
 Hoffmann Investigations.
 
