@@ -1,6 +1,7 @@
 /*
  * FILE stream functions
  *
+ * Copyright (c) 2010, Joachim Metz <jbmetz@users.sourceforge.net>
  * Copyright (c) 2006-2010, Joachim Metz <forensics@hoffmannbv.nl>,
  * Hoffmann Investigations.
  *
@@ -93,7 +94,11 @@ extern "C" {
 
 /* FILE stream seek
  */
-#if defined( HAVE_FSEEKO ) || defined( WINAPI )
+#if defined( WINAPI )
+#define file_stream_seek_offset( stream, offset, whence ) \
+	fseek( stream, offset, whence )
+
+#elif defined( HAVE_FSEEKO )
 #define file_stream_seek_offset( stream, offset, whence ) \
 	fseeko( stream, offset, whence )
 #endif
@@ -121,13 +126,13 @@ extern "C" {
 
 /* Variable arguments formatted print to stream function
  */
-#if defined( __BORLANDC__ ) && __BORLANDC__ < 0x0560
-#define file_stream_vfprintf \
-	vfprintf
-
-#elif defined( HAVE_GLIB_H )
+#if defined( HAVE_GLIB_H )
 #define file_stream_vfprintf( stream, format, ... ) \
 	g_vfprintf( stream, format, __VA_ARGS__ )
+
+#elif defined( __BORLANDC__ ) && ( __BORLANDC__ < 0x0560 )
+#define file_stream_vfprintf \
+	vfprintf
 
 #elif defined( HAVE_VFPRINTF ) || defined( WINAPI )
 #define file_stream_vfprintf( stream, format, ... ) \
