@@ -1,6 +1,7 @@
 /*
  * Type definitions for libfdatetime
  *
+ * Copyright (c) 2010, Joachim Metz <jbmetz@users.sourceforge.net>
  * Copyright (c) 2008-2010, Joachim Metz <forensics@hoffmannbv.nl>,
  * Hoffmann Investigations.
  *
@@ -72,10 +73,7 @@ typedef __int32			ssize_t;
 
 #elif defined( __BORLANDC__ )
 
-#if __BORLANDC__ >= 0x0560
-#include <stdint.h>
-
-#else
+#if __BORLANDC__ <= 0x0560
 
 /* Define LIBFDATETIME_DEFINITION_INTEGER_TYPES to avoid conflict
  */
@@ -113,7 +111,9 @@ typedef unsigned __int32	intptr_t;
 
 #endif /* LIBFDATETIME_DEFINITION_INTEGER_TYPES */
 
-#endif /* __BORLANDC__ >= 0x0560 */
+#else
+#include <stdint.h>
+#endif /* __BORLANDC__ <= 0x0560 */
 
 /* Type definitions for compilers that have access to
  * <inttypes.h> or <stdint.h>
@@ -134,13 +134,12 @@ typedef unsigned __int32	intptr_t;
 #include <wchar.h>
 
 #elif defined( __BORLANDC__ )
-#if __BORLANDC__ >= 0x0560
-#include <wchar.h>
-
-#else
+#if __BORLANDC__ <= 0x0520
 #include <string.h>
 
-#endif /* __BORLANDC__ >= 0x0560 */
+#else
+#include <wchar.h>
+#endif /* __BORLANDC__ <= 0x0520 */
 
 #elif @HAVE_WCHAR_H@ || defined( HAVE_WCHAR_H )
 
