@@ -1,4 +1,4 @@
-.Dd January 3, 2010
+.Dd February 22, 2010
 .Dt libfdatetime 3
 .Os libfdatetime
 .Sh NAME
@@ -74,6 +74,7 @@ http://libfdatetime.sourceforge.net/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
+Copyright (c) 2010, Joachim Metz <jbmetz@users.sourceforge.net>.
 Copyright 2009-2010 Joachim Metz, Hoffmann Investigations <forensics@hoffmannbv.nl> and contributors.
 This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .Sh SEE ALSO
