@@ -20,6 +20,10 @@ Deployment
 * add macosx file
 * add debian files
 
+20100222
+* email update
+* updated common, liberror
+
 20100105
 * base16 fix
 
